src/test/deca/context/invalid/pt_virgule.deca
// Juste un point virgule et une variable

// Date: 20.01.2022

{
    a;
}